
name:           build
version:        0.0.0
synopsis:       Executable built by bli prolog.
build-type:     Simple
cabal-version:  >= 1.10

executable build
  main-is: Main.hs
  other-modules:
  hs-source-dirs:
  build-depends:
      base <5
    , bli-prolog
  extensions:
     TemplateHaskell
  default-language: Haskell2010
  GHC-Options: -dynamic